<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_gogoshop"
            android:icon="@drawable/icons_go"
            android:title="@string/drawer_item_01" />
        <item
            android:id="@+id/nav_sale"
            android:icon="@drawable/icons_bang"
            android:title="@string/drawer_item_02" />
        <item
            android:id="@+id/nav_singlecase"
            android:icon="@drawable/icons_travel"
            android:title="@string/drawer_item_03" />
        <item
            android:id="@+id/nav_groupbuying"
            android:icon="@drawable/icons_group"
            android:title="@string/drawer_item_04" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
